--- a/_data/attendees.yml
+++ b/_data/attendees.yml
@@ -90,3 +90,8 @@
   github: vidhyav656
   twitter: vidhyav656
   website: https://vidhyav656.github.io/
+  
+- name: Rasika Muralidharan 
+  title: Developer-in-the-Making
+  image: Rasika.jpg
+  github: Rasikamurali
